# api/openapi.yaml
@@ -22,6 +22,8 @@ tags:
   - name: product detail
   - name: order
   - name: order detail
+  - name: product image
+  - name: banner image
 paths:
   /login:
     post:
@@ -2060,6 +2062,162 @@ paths:
           content: {}
       security:
         - bearerAuth: []
+  /image/products:
+    get:
+      tags:
+        - product image
+      summary: Get all product image data
+      operationId: getProductImageData
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductImage'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/ProductImage'
+        '404':
+          description: Not found
+          content: {}
+  /image/product:
+    post:
+        tags:
+          - product image
+        summary: Create new product image
+        operationId: createProductImage
+        parameters:
+          - name: product_detail_id
+            in: query
+            required: true
+            schema:
+              type: number
+          - name: photo
+            in: query
+            required: true
+            schema:
+              type: image
+        responses:
+          '200':
+            description: successful operation
+          '404':
+            description: Not found
+            content: {}
+  /image/product/{product_detail_id}:
+    get:
+      tags:
+        - product image
+      summary: Get product image by product_detail_id
+      operationId: getProductImage
+      parameters:
+        - name: product_detail_id
+          in: path
+          required: true
+          schema:
+            type: number
+      responses:
+        '200':
+          description: successful operation
+        '404':
+          description: Not found
+          content: {}
+  /image/product/{image_id}:
+    delete:
+      tags:
+        - product image
+      summary: Delete product image
+      operationId: deleteProductImage
+      parameters:
+        - name: image_id
+          in: path
+          required: true
+          schema:
+            type: number
+      responses:
+        '204':
+          description: successful operation
+        '404':
+          description: Not found
+          content: {}
+  /image/banners:
+    get:
+      tags:
+        - banner image
+      summary: Get all banner image data
+      operationId: getBannerImageData
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BannerImage'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/BannerImage'
+        '404':
+          description: Not found
+          content: {}
+  /image/banner:
+    post:
+        tags:
+          - banner image
+        summary: Create new banner image
+        operationId: createBannerImage
+        parameters:
+          - name: priority
+            in: query
+            required: true
+            schema:
+              type: number
+          - name: photo
+            in: query
+            required: true
+            schema:
+              type: image
+        responses:
+          '200':
+            description: successful operation
+          '404':
+            description: Not found
+            content: {}
+  /image/banner/{priority}:
+    get:
+      tags:
+        - banner image
+      summary: Get banner image by priority
+      operationId: getBannerImage
+      parameters:
+        - name: priority
+          in: path
+          required: true
+          schema:
+            type: number
+      responses:
+        '200':
+          description: successful operation
+        '404':
+          description: Not found
+          content: {}
+  /image/banner/{image_id}:
+    delete:
+      tags:
+        - banner image
+      summary: Delete banner image
+      operationId: deleteBannerImage
+      parameters:
+        - name: image_id
+          in: path
+          required: true
+          schema:
+            type: number
+      responses:
+        '204':
+          description: successful operation
+        '404':
+          description: Not found
+          content: {}
 components:
   securitySchemes:
     bearerAuth:
@@ -2237,3 +2395,37 @@ components:
           format: int64
       xml:
         name: OrderDetail
+    ProductImage:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+          format: int64
+        origin_name:
+          type: string
+          format: int64
+        product_detail_id:
+          type: integer
+          format: int64
+      xml:
+        name: ProductImage
+    BannerImage:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+          format: int64
+        origin_name:
+          type: string
+          format: int64
+        priority:
+          type: integer
+          format: int64
+      xml:
+        name: BannerImage
